--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2023:</strong> <strong>An Online Exam Cheating Prevention System Based on Facial Emotions and Multiple Behavioral Features</strong>, <i>The First Inventor</i>, ZL202310884470.8"
+- normal:
     content:  "<strong>2023:</strong> <strong>A Method and Device of Facial Action Unit Recognition Based on Adaptive Attention and Spatio-Temporal Correlation</strong>, <i>The First Inventor</i>, ZL202210606040.5"
 - normal:
     content:  "<strong>2022:</strong> <strong>A Method and Device of User Personality Characteristic Prediction Based on Multi-Modal Information Fusion</strong>, <i>The Third Inventor</i>, ZL202111079044.4"
