--- a/_data/news.yml
+++ b/_data/news.yml
@@ -5,6 +5,8 @@
 - normal:
     content:  "<strong>Jan. 2024:</strong> I am now studying at <strong>Hong Kong University of Science and Technology (HKUST)</strong> as a postdoctoral fellow, advised by <a href='https://sites.google.com/view/dyyeung'>Prof. Dit-Yan Yeung</a>."
 - normal:
+    content:  "<strong>Nov. 2023:</strong> I serve as an Associate Editor in <i>The Visual Computer</i>."
+- normal:
     content:  "<strong>Aug. 2023:</strong> I am a recipient of <strong>Hong Kong Scholars Program</strong>."
 - normal:
     content:  "<strong>July 2023:</strong> Our paper <strong>CT-Net: Arbitrary-Shaped Text Detection via Contour Transformer</strong> is accepted by <i>IEEE TCSVT</i>."
