--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,30 @@
+- title: 'Attribute-Driven Multimodal Hierarchical Prompts for Image Aesthetic Quality Assessment'
+  #date:  'Sept. 2018'
+  imgurl: '/images/projects/2024/zhu2024attribute.png'
+  selected: true
+  authors:
+    - name: Hancheng Zhu
+      url:  'https://zhuhancheng.github.io/'
+    - name: Ju Shi
+      url:  false  
+    - name: <strong>Zhiwen Shao*</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Rui Yao
+      url:  'https://ruiyao.bitbucket.io/'  
+    - name: Yong Zhou*
+      url:  false
+    - name: Jiaqi Zhao
+      url:  false
+    - name: Leida Li
+      url:  'https://web.xidian.edu.cn/ldli/en/index.html'
+  publisher:  'ACM MM 2024'
+  status:   '(CCF A)'
+  place:   'in Melbourne, Australia'
+  desc: 'This paper proposes an image aesthetic quality assessment method based on attribute-driven multimodal hierarchical prompts. Unlike existing IAQA methods that utilize multimodal pre-training or straightforward prompts for model learning, the proposed method leverages attribute comments and quality-level text templates to hierarchically learn the aesthetic attributes and quality of images. Specifically, we first leverage users' aesthetic attribute comments to perform prompt learning on images. The learned attribute-driven multimodal features can comprehensively capture the semantic information of image aesthetic attributes perceived by users. Then, we construct text templates for different aesthetic quality levels to further facilitate prompt learning through semantic information related to the aesthetic quality of images. The proposed method can explicitly simulate users' aesthetic judgment of images to obtain more precise aesthetic quality.'
+  tags:
+    - name: 'site'
+      url:  'https://dl.acm.org/doi/10.1145/3664647.3681175'
+      
 - title: 'Joint Facial Action Unit Recognition and Self-Supervised Optical Flow Estimation'
   #date:  'Jul. 2018'
   imgurl: '/images/projects/2024/shao2024joint.png'
