--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -49,6 +49,29 @@
   tags:  
     - name: 'site'
       url:  'https://www.ejournal.org.cn/EN/10.12263/DZXB.20240279'      
+
+- title: 'Scene-aware Foveated Neural Radiance Fields'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2024/shi2024scene.png'
+  selected: true
+  authors:
+    - name: Xuehuai Shi
+      url:  false
+    - name: Lili Wang
+      url:  'https://liliwang.net/'      
+    - name: Xinda Liu
+      url:  false
+    - name: Jian Wu
+      url:  false
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+  publisher:  'IEEE Transactions on Visualization and Computer Graphics (TVCG), 2024'
+  status:   '(CCF A, SCI Q1)'
+  #place:   'in Ottawa, Canada'
+  desc: 'In this paper, we propose a scene-aware foveated neural radiance fields method to synthesize high-quality foveated images in complex VR scenes at high frame rates. Firstly, we construct a multi-ellipsoidal neural representation to enhance the neural radiance fields representation capability in salient regions of complex VR scenes based on the scene content. Then, we introduce a uniform sampling based foveated neural radiance fields framework to improve the foveated image synthesis performance with one-pass color inference, and improve the synthesis quality by leveraging the foveated scene-aware objective function.'
+  tags:
+    - name: 'site'
+      url:  'https://ieeexplore.ieee.org/document/10599866'
       
 - title: 'Joint Facial Action Unit Recognition and Self-Supervised Optical Flow Estimation'
   #date:  'Jul. 2018'
