--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>August 2024:</strong> I am a recipient of <strong>General Project of National Natural Science Foundation of China</strong>."
+- normal:
     content:  "<strong>May 2024:</strong> I am a recipient of <strong>First Prize for Technological Achievement of Department of Education of the Henan Province</strong>."
 - normal:
     content:  "<strong>Jan. 2024:</strong> I serve as an Area Chair in <i>ACM International Conference on Multimedia (MM) 2024</i>."
