--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -22,8 +22,10 @@
   #place:   'in San Diego, USA'
   desc: 'We propose a novel AU detection framework called AC2D by adaptively constraining self-attention weight distribution and causally deconfounding the sample confounder. Specifically, we explore the mechanism of self-attention weight distribution, in which the self-attention weight distribution of each AU is regarded as spatial distribution and is adaptively learned under the constraint of location-predefined attention and the guidance of AU detection. Moreover, we propose a causal intervention module for each AU, in which the bias caused by training samples and the interference from irrelevant AUs are both suppressed.'
   tags:
-    #- name: 'site'
-    #  url:  'https://www.ejournal.org.cn/EN/10.12263/DZXB.20240279'     
+    - name: 'arXiv'
+      url:  'https://arxiv.org/abs/2410.01251'
+    - name: 'code'
+      url:  'https://github.com/ZhiwenShao/AC2D' 
 
 - title: 'Motion-Aware Self-Supervised RGBT Tracking with Multi-modality Hierarchical Transformers'
   #date:  'Jul. 2018'
