--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -55,6 +55,8 @@
     #  url:  'https://arxiv.org/abs/2307.13310'
     - name: 'site'
       url:  'https://link.springer.com/article/10.1007/s00371-024-03676-w'
+    - name: 'code'
+      url:  'https://github.com/CYF-cuber/HLoRA_MER_dinov2'   
 
 - title: 'Motion-Aware Self-Supervised RGBT Tracking with Multi-modality Hierarchical Transformers'
   #date:  'Jul. 2018'
