--- a/_data/alumni.yml
+++ b/_data/alumni.yml
@@ -1,16 +1,20 @@
 - normal:
-    content:  "Yuchen Su - Master from CUMT, 2023. Position: Ph.D. Candidate, Fudan University"
+    content:  "Yingjie Xia - Undergraduate from CUMT, 2024. Position: Master Student, Nankai University"
+- normal:
+    content:  "Wentao Jiang - Undergraduate from CUMT, 2024. Position: Master Student, ShanghaiTech University"    
+- normal:
+    content:  "Yuchen Su - Master Student from CUMT, 2023. Position: Ph.D. Candidate, Fudan University"
 - normal:
     content:  "Feiran Li - Undergraduate from CUMT, 2023. Position: Ph.D. Candidate, University of Chinese Academy of Sciences"
 - normal:
-    content:  "Yutian Zhang - Undergraduate from CUMT, 2023. Position: Master, Shanghai Jiao Tong University"
+    content:  "Yutian Zhang - Undergraduate from CUMT, 2023. Position: Master Student, Shanghai Jiao Tong University"
 - normal:
-    content:  "Qing Yu - Undergraduate from CUMT, 2023. Position: Master, Wuhan University"
+    content:  "Qing Yu - Undergraduate from CUMT, 2023. Position: Master Student, Wuhan University"
 - normal:
-    content:  "Ying Sun - Undergraduate from CUMT, 2022. Position: Master, Wuhan University"
+    content:  "Ying Sun - Undergraduate from CUMT, 2022. Position: Master Student, Wuhan University"
 - normal:
-    content:  "Lixiang Xu - Undergraduate from CUMT, 2022. Position: Master, Xidian University"
+    content:  "Lixiang Xu - Undergraduate from CUMT, 2022. Position: Master Student, Xidian University"
 - normal:
-    content:  "Chaoyi Ai - Undergraduate from CUMT, 2021. Position: Master, ShanghaiTech University"
+    content:  "Chaoyi Ai - Undergraduate from CUMT, 2021. Position: Master Student, ShanghaiTech University"
 - normal:
-    content:  "Hongyu Wan - Undergraduate from CUMT, 2021. Position: Master, Northeastern University, USA"    
+    content:  "Hongyu Wan - Undergraduate from CUMT, 2021. Position: Master Student, Northeastern University, USA"    
