--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Oct. 2024:</strong> I am a recipient of <strong>National Youth Skilled Worker in the Coal Industry</strong>."
+- normal:
     content:  "<strong>Sept. 2024:</strong> Our paper <strong>Facial Action Unit Detection by Adaptively Constraining Self-Attention and Causally Deconfounding Sample</strong> is accepted by <i>IJCV</i>."
 - normal:
     content:  "<strong>Aug. 2024:</strong> I am a recipient of <strong>General Project of National Natural Science Foundation of China</strong>."
