--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2024:</strong> <strong>National Youth Skilled Worker in the Coal Industry</strong>"
+- normal:
     content:  "<strong>2024:</strong> <strong>First Prize for Technological Achievement of Department of Education of the Henan Province</strong>, <i>2/10</i>"
 - normal:
     content:  "<strong>2023:</strong> <strong>Excellent Thesis Advisor of the China University of Mining and Technology</strong>"
