--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>Oct. 2024:</strong> I am a recipient of <strong>National Youth Skilled Worker in the Coal Industry</strong>."
+    content:  "<strong>Oct. 2024:</strong> I am a recipient of <strong>The 3rd National Youth Skilled Worker in the Coal Industry</strong>."
 - normal:
     content:  "<strong>Sept. 2024:</strong> Our paper <strong>Facial Action Unit Detection by Adaptively Constraining Self-Attention and Causally Deconfounding Sample</strong> is accepted by <i>IJCV</i>."
 - normal:
