--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>2024:</strong> <strong>National Youth Skilled Worker in the Coal Industry</strong>"
+    content:  "<strong>2024:</strong> <strong>The 3rd National Youth Skilled Worker in the Coal Industry</strong>"
 - normal:
     content:  "<strong>2024:</strong> <strong>First Prize for Technological Achievement of Department of Education of the Henan Province</strong>, <i>2/10</i>"
 - normal:
