--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -38,13 +38,13 @@
       url:  false
     - name: Xiaoqi Guo
       url:  false
-    - name: <strong>Zhiwen Shao</strong>
+    - name: <strong>Zhiwen Shao*</strong>
       url:  'https://zhiwenshao.github.io/'  
-    - name: Yuhu Dai
+    - name: Yuhu Dai*
       url:  false
-    - name: Ming Zhang
+    - name: Ming Zhang*
       url:  false
-    - name: Chuandong Lang
+    - name: Chuandong Lang*
       url:  false
   publisher:  'Applied Intelligence (APIN), 2024'
   status:   '(CCF C, SCI Q2)'
