--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2024:</strong> <strong>WeChat Mini-Program V1.0 for Scoliosis Recognition Based on Symmetric Visual Perception on Natural Image</strong>, <i>Software Copyright</i>, <i>The First Inventor</i>, 2024SR1646431"
+- normal:
     content:  "<strong>2024:</strong> <strong>Drowning Behavior Analysis Method and Anti-Drowning System Based on Multi-Object Tracking and Recognition</strong>, <i>The First Inventor</i>, ZL202410624672.3"
 - normal:
     content:  "<strong>2024:</strong> <strong>Anti-Drowning Safety Management System V1.0 in Swimming Venue Based on Multi-Object Tracking and Recognition</strong>, <i>Software Copyright</i>, <i>The First Inventor</i>, 2024SR1027205"
