--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -81,7 +81,7 @@
       url:  false
     - name: Chunyu Li
       url:  false
-    - name: Lizhuang Ma
+    - name: Lizhuang Ma*
       url:  'http://dmcv.sjtu.edu.cn/people'  
   publisher:  'CEI 2024'
   status:   '(EI)'
