--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2024:</strong> <strong>Best Student Paper Award in 2024 CSIG Conference on Emotional Intelligence, Corresponding Author</strong>"
+- normal:
     content:  "<strong>2024:</strong> <strong>The 3rd National Youth Skilled Worker in the Coal Industry</strong>"
 - normal:
     content:  "<strong>2024:</strong> <strong>First Prize for Technological Achievement of Department of Education of the Henan Province</strong>, <i>2/10</i>"
