--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,7 @@
       url:  false
     - name: Sirui He
       url:  false
-    - name: <strong>Zhiwen Shao</strong>
+    - name: <strong>Zhiwen Shao*</strong>
       url:  'https://zhiwenshao.github.io/'
     - name: Dit-Yan Yeung
       url:  'https://sites.google.com/view/dyyeung' 
