--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Young Academic Leader Program of China University of Mining and Technology</strong>."
+- normal:
     content:  "<strong>Dec. 2024:</strong> We obtain <strong>Best Student Paper Award</strong> in <strong>2024 CSIG Conference on Emotional Intelligence</strong>."
 - normal:
     content:  "<strong>Oct. 2024:</strong> I am a recipient of <strong>The 3rd National Youth Skilled Worker in the Coal Industry</strong>."
