--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Young Academic Leader Program of China University of Mining and Technology</strong>."
+    content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Young Academic Leader Program of the </strong>."
 - normal:
     content:  "<strong>Dec. 2024:</strong> We obtain <strong>Best Student Paper Award</strong> in <strong>2024 CSIG Conference on Emotional Intelligence</strong>."
 - normal:
@@ -25,7 +25,7 @@
 - normal:
     content:  "<strong>May 2023:</strong> Our paper <strong>Facial Action Unit Detection via Adaptive Attention and Relation</strong> is accepted by <i>IEEE TIP</i>."
 - normal:
-    content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>."    
+    content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Outstanding Young Teacher Program of the </strong>."    
 - normal:
     content:  "<strong>Jan. 2023:</strong> I serve as a Publication Chair in <i>Computer Graphics International (CGI) 2023</i>."
 - normal:
