--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>2024:</strong> <strong>Young Academic Leader Program of China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2024:</strong> <strong>Young Academic Leader Program of the China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2024:</strong> <strong>General Project of the National Natural Science Foundation of China</strong>, <i>Principal Investigator</i>"
 - normal:
@@ -11,7 +11,7 @@
 - normal:
     content:  "<strong>2023:</strong> <strong>General Project of China Postdoctoral Science Foundation</strong>, <i>Principal Investigator</i>"
 - normal:
-    content:  "<strong>2023:</strong> <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2023:</strong> <strong>Outstanding Young Teacher Program of the China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2022:</strong> <strong>Participation in Computer Graphics International (CGI) 2022 Supported by K.C.Wong Education Foundation</strong>, <i>Principal Investigator</i>"
 - normal:
@@ -25,4 +25,4 @@
 - normal:
     content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the Fundamental Research Funds for the Central Universities</strong>, <i>Principal Investigator</i>"
 - normal:
-    content:  "<strong>2020:</strong> <strong>Start-Up Grant of China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2020:</strong> <strong>Start-Up Grant of the China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
