--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -9,7 +9,7 @@
       url:  false
     - name: <strong>Zhiwen Shao*</strong>
       url:  'https://zhiwenshao.github.io/'
-    - name: Dit-Yan Yeung
+    - name: Dit-Yan Yeung*
       url:  'https://sites.google.com/view/dyyeung' 
   publisher:  'AAAI 2025'
   status:   '(CCF A)'
