--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -65,7 +65,7 @@
       url:  false
     - name: <strong>Zhiwen Shao</strong>
       url:  'https://zhiwenshao.github.io/'
-  publisher:  'IEEE Transactions on Geoscience and Remote Sensing, 2024'
+  publisher:  'IEEE Transactions on Geoscience and Remote Sensing (TGRS), 2024'
   status:   '(CCF B)'
   #place:   'in Ottawa, Canada'
   desc: 'We propose a unified spectral-spatiotemporal multimodal dual-stream prompt hyperspectral object tracking, named HDSP. We design a density clustering-based band selection module to preserve spectral prompt information efficiently. Using the generated bands and temporal data as multimodal prompts, a dual-stream visual prompter is proposed. Designed Multimodal Dual-stream Visual Prompter (MDVP) transform the multimodal input into a single modality, enhancing the foundational modality’s representation capabilities for hyperspectral tracking.'
